crates/compiler/src/tests/e2e/good/0094_generic_struct_field_type_propagation/main.gom
struct Pair[A, B] {
    first: A,
    second: B,
}

fn main() {
    let p: Pair[uint8, float32] = Pair { first: 10, second: 3.14 };
    println(uint8_to_string(p.first));
    println(float32_to_string(p.second));
}
